--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This challenge allows you to practice the concepts and techniques learned over the past week and apply them in a concrete project. This Sprint explored advanced CSS techniques using Responsive Design and Preprocessing. During this Sprint, you studied how to use the viewport meta tag, media queries, setting up a preprocessor, and advanced use of preprocessing techniques. In your challenge this week, you will demonstrate proficiency by updating a website that is missing content as well as adding mobile styling.",
   "main": "index.js",
   "scripts": {
+    "less-watch": "less-watch-compiler less css index.less",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,8 +20,6 @@
   "homepage": "https://github.com/SGonzalez44/Sprint-Challenge--Advanced-CSS#readme",
   "dependencies": {
     "less": "^3.9.0",
-    "less-watch-compiler": "^1.13.0",
-    "watch-compiler": "^1.1.0"
-  },
-  "devDependencies": {}
+    "less-watch-compiler": "^1.13.0"
+  }
 }
